Changed avatar pic

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 name: "Noah HI"
 
 # Description of your content (will only be used on Google Search)
-description:  "Stuff made by Noah Hunt-Isaak"
+description:  "Processing sketches and games made by Noah Hunt-Isaak"
 
 # Your name. Will show in your footer + sidebar
 author: "Noah Hunt-Isaak"
