--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ permalink: :title/
 
 
 # A short presentation of yourself. Will show in the sidebar, under your name. Best usage would be between 30 to 50 words.
-author-bio: "I am going to be a freshman at Dickinson college. My five favorite things are soccer, videogames, coding, sleeping, and hot chocolate in no particular order."
+author-bio: "I'm a freshman at Dickinson college. My five favorite things are soccer, coding, videogames, sleeping, and hot chocolate in no particular order."
 
 # Social Accounts (mine, as placeholders)
 twitter:
