Made home button say home

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Title of your blog; shows in the header
-name: "Noah HI"
+name: "Home"
 
 # Description of your content (will only be used on Google Search)
 description:  "Processing sketches and games made by Noah Hunt-Isaak"
